# envirofacts-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  test_mcp_server.py
.cursor/: mcp.json
src/: __init__.py
src/client/: __init__.py  base.py  compliance.py  frs.py  rcra.py  sdwis.py  tri.py
src/models/: __init__.py  common.py  compliance.py  facility.py  releases.py  summary.py  water.py
src/tools/: __init__.py  chemical_releases.py  compliance_history.py  location_summary.py  search_facilities.py
src/utils/: __init__.py  aggregation.py  distance.py  geocoding.py
tests/: __init__.py  conftest.py
tests/client/: __init__.py  test_base.py  test_frs.py  test_rcra.py  test_sdwis.py  test_tri.py
tests/tools/: __init__.py  test_chemical_releases.py  test_chemical_releases_integration.py  test_compliance_history.py  test_compliance_history_integration.py  test_location_summary.py  test_location_summary_integration.py  test_search_facilities.py  test_search_facilities_integration.py
tests/utils/: __init__.py  test_aggregation.py  test_distance.py  test_geocoding.py
